python/grammar/diceParser.py
# Generated from dice.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class diceParser ( Parser ):

    grammarFileName = "dice.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'='", "';'", "'\u00A3'", "'!'", 
                     "'~'", "'#'", "'<='", "'>='", "'<'", "'>'", "'r'", 
                     "'R'", "'..'", "'d'", "'dF'", "'df'", "'+'", "'^'", 
                     "'-'", "'*'", "'/'", "'%'", "'|'", "'@'", "'('", "')'", 
                     "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "PLUS", "POWER", "MINUS", 
                      "MULT", "DIV", "MODULO", "DIV_RUP", "SEVERAL", "OPEN_BRACKET", 
                      "CLOSE_BRACKET", "OPEN_BRACE", "CLOSE_BRACE", "SNHigh", 
                      "SNLow", "RNHigh", "RNLow", "RNDHigh", "RNDLow", "INTEGER_NUMBER", 
                      "WSPACE", "STRING" ]

    RULE_schema = 0
    RULE_assignment = 1
    RULE_variable = 2
    RULE_sequence = 3
    RULE_dice_roll = 4
    RULE_math_addsub = 5
    RULE_math_muldiv = 6
    RULE_math_several = 7
    RULE_math_pow = 8
    RULE_math_neg = 9
    RULE_math_leaf = 10
    RULE_die_roll = 11
    RULE_die_modifier = 12
    RULE_count = 13
    RULE_bang = 14
    RULE_explode = 15
    RULE_implode = 16
    RULE_force = 17
    RULE_condition = 18
    RULE_reroll = 19
    RULE_rr_times = 20
    RULE_rr_all = 21
    RULE_subset = 22
    RULE_subset_standard_notation = 23
    RULE_subset_rolegate_notation = 24
    RULE_subset_rolegate_drop_notation = 25
    RULE_subset_size = 26
    RULE_amount = 27
    RULE_faces = 28
    RULE_numeric_sequence = 29
    RULE_numeric_item = 30
    RULE_seq_item = 31
    RULE_die = 32
    RULE_fateDie = 33

    ruleNames =  [ "schema", "assignment", "variable", "sequence", "dice_roll", 
                   "math_addsub", "math_muldiv", "math_several", "math_pow", 
                   "math_neg", "math_leaf", "die_roll", "die_modifier", 
                   "count", "bang", "explode", "implode", "force", "condition", 
                   "reroll", "rr_times", "rr_all", "subset", "subset_standard_notation", 
                   "subset_rolegate_notation", "subset_rolegate_drop_notation", 
                   "subset_size", "amount", "faces", "numeric_sequence", 
                   "numeric_item", "seq_item", "die", "fateDie" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    PLUS=18
    POWER=19
    MINUS=20
    MULT=21
    DIV=22
    MODULO=23
    DIV_RUP=24
    SEVERAL=25
    OPEN_BRACKET=26
    CLOSE_BRACKET=27
    OPEN_BRACE=28
    CLOSE_BRACE=29
    SNHigh=30
    SNLow=31
    RNHigh=32
    RNLow=33
    RNDHigh=34
    RNDLow=35
    INTEGER_NUMBER=36
    WSPACE=37
    STRING=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class SchemaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(diceParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(diceParser.AssignmentContext,i)


        def sequence(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(diceParser.SequenceContext)
            else:
                return self.getTypedRuleContext(diceParser.SequenceContext,i)


        def getRuleIndex(self):
            return diceParser.RULE_schema

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSchema" ):
                listener.enterSchema(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSchema" ):
                listener.exitSchema(self)




    def schema(self):

        localctx = diceParser.SchemaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_schema)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 68
                    self.assignment() 
                self.state = 73
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << diceParser.T__14) | (1 << diceParser.T__15) | (1 << diceParser.T__16) | (1 << diceParser.MINUS) | (1 << diceParser.SEVERAL) | (1 << diceParser.OPEN_BRACKET) | (1 << diceParser.INTEGER_NUMBER) | (1 << diceParser.WSPACE))) != 0):
                self.state = 74
                self.sequence()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==diceParser.T__0:
                    self.state = 75
                    self.match(diceParser.T__0)
                    self.state = 76
                    self.sequence()
                    self.state = 81
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(diceParser.STRING, 0)

        def dice_roll(self):
            return self.getTypedRuleContext(diceParser.Dice_rollContext,0)


        def WSPACE(self, i:int=None):
            if i is None:
                return self.getTokens(diceParser.WSPACE)
            else:
                return self.getToken(diceParser.WSPACE, i)

        def getRuleIndex(self):
            return diceParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = diceParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==diceParser.WSPACE:
                self.state = 84
                self.match(diceParser.WSPACE)


            self.state = 87
            self.match(diceParser.STRING)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==diceParser.WSPACE:
                self.state = 88
                self.match(diceParser.WSPACE)


            self.state = 91
            self.match(diceParser.T__1)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==diceParser.WSPACE:
                self.state = 92
                self.match(diceParser.WSPACE)


            self.state = 95
            self.dice_roll()
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==diceParser.WSPACE:
                self.state = 96
                self.match(diceParser.WSPACE)


            self.state = 99
            self.match(diceParser.T__2)
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 100
                self.match(diceParser.WSPACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEVERAL(self):
            return self.getToken(diceParser.SEVERAL, 0)

        def STRING(self):
            return self.getToken(diceParser.STRING, 0)

        def getRuleIndex(self):
            return diceParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)




    def variable(self):

        localctx = diceParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(diceParser.SEVERAL)
            self.state = 104
            self.match(diceParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SequenceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dice_roll(self):
            return self.getTypedRuleContext(diceParser.Dice_rollContext,0)


        def WSPACE(self, i:int=None):
            if i is None:
                return self.getTokens(diceParser.WSPACE)
            else:
                return self.getToken(diceParser.WSPACE, i)

        def getRuleIndex(self):
            return diceParser.RULE_sequence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSequence" ):
                listener.enterSequence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSequence" ):
                listener.exitSequence(self)




    def sequence(self):

        localctx = diceParser.SequenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_sequence)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==diceParser.WSPACE:
                self.state = 106
                self.match(diceParser.WSPACE)


            self.state = 109
            self.dice_roll()
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==diceParser.WSPACE:
                self.state = 110
                self.match(diceParser.WSPACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Dice_rollContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def math_addsub(self):
            return self.getTypedRuleContext(diceParser.Math_addsubContext,0)


        def getRuleIndex(self):
            return diceParser.RULE_dice_roll

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDice_roll" ):
                listener.enterDice_roll(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDice_roll" ):
                listener.exitDice_roll(self)




    def dice_roll(self):

        localctx = diceParser.Dice_rollContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_dice_roll)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.math_addsub(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Math_addsubContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return diceParser.RULE_math_addsub

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class AddContext(Math_addsubContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a diceParser.Math_addsubContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def math_addsub(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(diceParser.Math_addsubContext)
            else:
                return self.getTypedRuleContext(diceParser.Math_addsubContext,i)

        def PLUS(self):
            return self.getToken(diceParser.PLUS, 0)
        def WSPACE(self, i:int=None):
            if i is None:
                return self.getTokens(diceParser.WSPACE)
            else:
                return self.getToken(diceParser.WSPACE, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd" ):
                listener.enterAdd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd" ):
                listener.exitAdd(self)


    class SubContext(Math_addsubContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a diceParser.Math_addsubContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def math_addsub(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(diceParser.Math_addsubContext)
            else:
                return self.getTypedRuleContext(diceParser.Math_addsubContext,i)

        def MINUS(self):
            return self.getToken(diceParser.MINUS, 0)
        def WSPACE(self, i:int=None):
            if i is None:
                return self.getTokens(diceParser.WSPACE)
            else:
                return self.getToken(diceParser.WSPACE, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSub" ):
                listener.enterSub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSub" ):
                listener.exitSub(self)


    class BubbleMulDivContext(Math_addsubContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a diceParser.Math_addsubContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def math_muldiv(self):
            return self.getTypedRuleContext(diceParser.Math_muldivContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBubbleMulDiv" ):
                listener.enterBubbleMulDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBubbleMulDiv" ):
                listener.exitBubbleMulDiv(self)



    def math_addsub(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = diceParser.Math_addsubContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_math_addsub, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = diceParser.BubbleMulDivContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 116
            self.math_muldiv(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 138
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 136
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
                    if la_ == 1:
                        localctx = diceParser.AddContext(self, diceParser.Math_addsubContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_math_addsub)
                        self.state = 118
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 120
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==diceParser.WSPACE:
                            self.state = 119
                            self.match(diceParser.WSPACE)


                        self.state = 122
                        self.match(diceParser.PLUS)
                        self.state = 124
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==diceParser.WSPACE:
                            self.state = 123
                            self.match(diceParser.WSPACE)


                        self.state = 126
                        self.math_addsub(4)
                        pass

                    elif la_ == 2:
                        localctx = diceParser.SubContext(self, diceParser.Math_addsubContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_math_addsub)
                        self.state = 127
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 129
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==diceParser.WSPACE:
                            self.state = 128
                            self.match(diceParser.WSPACE)


                        self.state = 131
                        self.match(diceParser.MINUS)
                        self.state = 133
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==diceParser.WSPACE:
                            self.state = 132
                            self.match(diceParser.WSPACE)


                        self.state = 135
                        self.math_addsub(3)
                        pass

             
                self.state = 140
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Math_muldivContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return diceParser.RULE_math_muldiv

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class DivUpContext(Math_muldivContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a diceParser.Math_muldivContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def math_muldiv(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(diceParser.Math_muldivContext)
            else:
                return self.getTypedRuleContext(diceParser.Math_muldivContext,i)

        def DIV_RUP(self):
            return self.getToken(diceParser.DIV_RUP, 0)
        def WSPACE(self, i:int=None):
            if i is None:
                return self.getTokens(diceParser.WSPACE)
            else:
                return self.getToken(diceParser.WSPACE, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDivUp" ):
                listener.enterDivUp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDivUp" ):
                listener.exitDivUp(self)


    class BubbleSeveralContext(Math_muldivContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a diceParser.Math_muldivContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def math_several(self):
            return self.getTypedRuleContext(diceParser.Math_severalContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBubbleSeveral" ):
                listener.enterBubbleSeveral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBubbleSeveral" ):
                listener.exitBubbleSeveral(self)


    class MulContext(Math_muldivContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a diceParser.Math_muldivContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def math_muldiv(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(diceParser.Math_muldivContext)
            else:
                return self.getTypedRuleContext(diceParser.Math_muldivContext,i)

        def MULT(self):
            return self.getToken(diceParser.MULT, 0)
        def WSPACE(self, i:int=None):
            if i is None:
                return self.getTokens(diceParser.WSPACE)
            else:
                return self.getToken(diceParser.WSPACE, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMul" ):
                listener.enterMul(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMul" ):
                listener.exitMul(self)


    class ModuloContext(Math_muldivContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a diceParser.Math_muldivContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def math_muldiv(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(diceParser.Math_muldivContext)
            else:
                return self.getTypedRuleContext(diceParser.Math_muldivContext,i)

        def MODULO(self):
            return self.getToken(diceParser.MODULO, 0)
        def WSPACE(self, i:int=None):
            if i is None:
                return self.getTokens(diceParser.WSPACE)
            else:
                return self.getToken(diceParser.WSPACE, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModulo" ):
                listener.enterModulo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModulo" ):
                listener.exitModulo(self)


    class DivDownContext(Math_muldivContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a diceParser.Math_muldivContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def math_muldiv(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(diceParser.Math_muldivContext)
            else:
                return self.getTypedRuleContext(diceParser.Math_muldivContext,i)

        def DIV(self):
            return self.getToken(diceParser.DIV, 0)
        def WSPACE(self, i:int=None):
            if i is None:
                return self.getTokens(diceParser.WSPACE)
            else:
                return self.getToken(diceParser.WSPACE, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDivDown" ):
                listener.enterDivDown(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDivDown" ):
                listener.exitDivDown(self)



    def math_muldiv(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = diceParser.Math_muldivContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_math_muldiv, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = diceParser.BubbleSeveralContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 142
            self.math_several(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 182
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,25,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 180
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,24,self._ctx)
                    if la_ == 1:
                        localctx = diceParser.MulContext(self, diceParser.Math_muldivContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_math_muldiv)
                        self.state = 144
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 146
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==diceParser.WSPACE:
                            self.state = 145
                            self.match(diceParser.WSPACE)


                        self.state = 148
                        self.match(diceParser.MULT)
                        self.state = 150
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==diceParser.WSPACE:
                            self.state = 149
                            self.match(diceParser.WSPACE)


                        self.state = 152
                        self.math_muldiv(6)
                        pass

                    elif la_ == 2:
                        localctx = diceParser.DivDownContext(self, diceParser.Math_muldivContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_math_muldiv)
                        self.state = 153
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 155
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==diceParser.WSPACE:
                            self.state = 154
                            self.match(diceParser.WSPACE)


                        self.state = 157
                        self.match(diceParser.DIV)
                        self.state = 159
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==diceParser.WSPACE:
                            self.state = 158
                            self.match(diceParser.WSPACE)


                        self.state = 161
                        self.math_muldiv(5)
                        pass

                    elif la_ == 3:
                        localctx = diceParser.DivUpContext(self, diceParser.Math_muldivContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_math_muldiv)
                        self.state = 162
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 164
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==diceParser.WSPACE:
                            self.state = 163
                            self.match(diceParser.WSPACE)


                        self.state = 166
                        self.match(diceParser.DIV_RUP)
                        self.state = 168
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==diceParser.WSPACE:
                            self.state = 167
                            self.match(diceParser.WSPACE)


                        self.state = 170
                        self.math_muldiv(4)
                        pass

                    elif la_ == 4:
                        localctx = diceParser.ModuloContext(self, diceParser.Math_muldivContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_math_muldiv)
                        self.state = 171
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 173
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==diceParser.WSPACE:
                            self.state = 172
                            self.match(diceParser.WSPACE)


                        self.state = 175
                        self.match(diceParser.MODULO)
                        self.state = 177
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==diceParser.WSPACE:
                            self.state = 176
                            self.match(diceParser.WSPACE)


                        self.state = 179
                        self.math_muldiv(3)
                        pass

             
                self.state = 184
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,25,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Math_severalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return diceParser.RULE_math_several

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class BubblePowContext(Math_severalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a diceParser.Math_severalContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def math_pow(self):
            return self.getTypedRuleContext(diceParser.Math_powContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBubblePow" ):
                listener.enterBubblePow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBubblePow" ):
                listener.exitBubblePow(self)


    class SeveralContext(Math_severalContext):
